syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.helloworld";
option java_outer_classname = "GreeterProto";
option objc_class_prefix = "HLW";

package helloworld;

service Greeter {
    rpc SayHello (GreeterRequest) returns (stream GreeterReply) {
    }
}

message GreeterRequest {
    string name = 1;
}

message GreeterReply {
    string message = 1;
}